Made a ton of little spacing fixes. Added footer to index, changed color scheme for all pages, made sure styling was consistent across all pages

--- a/resources/css/RNAtoAmino.css
+++ b/resources/css/RNAtoAmino.css
@@ -7,7 +7,7 @@ p {
 }
 
 #row-1 {
-    padding-top: 10%;
+    padding-top: 5%;
 }
 
 #main-title {
@@ -21,12 +21,17 @@ p {
     margin-bottom: 20px;
 }
 
+#submit-button{
+    background-color: rgb(112, 36, 112);
+    border-color: rgb(112, 36, 112);
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    border: 1px solid #e7e7e7;
+    border-bottom: 1px solid rgb(112, 36, 112);;
     background-color: #f3f3f3;
 }
 
@@ -48,6 +53,27 @@ li a:hover:not(.active) {
 
 li a.active {
     color: white;
-    background-color: #4CAF50;
+    background-color: rgb(112, 36, 112);
 }
 
+.form-control {
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.form-inline {
+    margin-left: 34%;
+    margin-bottom: -2.8%;
+}
+
+.row-1 {
+    display: inline-block;
+}
+
+#display-f {
+    display: inline-block;
+}
+
+#display-l {
+    display: inline-block;
+}
