--- a/resources/css/basecount.css
+++ b/resources/css/basecount.css
@@ -51,12 +51,19 @@ form {
     background: white;
 }
 
+#submit-button {
+    background-color: rgb(112, 36, 112);
+    border-color: rgb(112, 36, 112);
+    margin-bottom: 1%;
+    left: 3%;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    border: 1px solid #e7e7e7;
+    border-bottom: 1px solid rgb(112, 36, 112);
     background-color: #f3f3f3;
 }
 
@@ -78,5 +85,14 @@ li a:hover:not(.active) {
 
 li a.active {
     color: white;
-    background-color: #4CAF50;
+    background-color: rgb(112, 36, 112);
+}
+
+.form-control {
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.form-inline {
+    margin-left: 34%;
 }
