--- a/resources/css/complement.css
+++ b/resources/css/complement.css
@@ -7,7 +7,8 @@ p {
 }
 
 #row-1 {
-    padding-top: 10%;
+    padding-top: 5%;
+    margin-bottom: 2%;
 }
 
 #main-title {
@@ -21,15 +22,18 @@ p {
     margin-bottom: 20px;
 }
 
-
+#submit-button {
+    background-color: rgb(112, 36, 112);
+    border-color: rgb(112, 36, 112);
+}
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    border: 1px solid #e7e7e7;
-    background-color: #f3f3f3;
+    border-bottom: 1px solid rgb(112, 36, 112);
+    background-color: #ffffff;
 }
 
 li {
@@ -50,6 +54,14 @@ li a:hover:not(.active) {
 
 li a.active {
     color: white;
-    background-color: #4CAF50;
+    background-color: rgb(112, 36, 112);
 }
 
+.form-control {
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.form-inline {
+    margin-left: 34%;
+}
