--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -103,14 +103,32 @@ body{
 footer{
     background-color: rgb(32, 32, 32);
     height: 20%;
-    padding-top: 12.5%;
+    padding-top: 0.8%;
 }
 
-h5 {
+#footer-content{
     color: white;
+    padding-bottom: 3%;
+}
+
+#footer-content-p{
+    color: white !important;
+    padding-top: 2%;
+    padding-left: 6%;
+}
+
+#footer-h3{
+    padding-left: 6%;
+    padding-top: 2%;
 }
 
 #sub-footer-content{
     background-color: rgb(24, 24, 24);
     color: white;
+}
+
+#footer-content-p-2 {
+    color: white !important;
+    padding-top: 2%;
+    padding-left: 6%;
 }
